replay button added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     <div class="container-3">
         <h2>Game : Rock , Paper , Scissors </h2>
+        <button class="btn btn-success" id="replay" onclick="replay()">Click here to Play</button>
+
         <div class="flex-box-rps" id="flex-box-rps-div">
         <img id='rock' src="http://clipart-library.com/data_images/301711.png" height="150" width="150" alt="" onclick="rpsGame(this)">
         <img id='paper' src="http://clipart-library.com/data_images/615935.png" height="150" width="150" alt="" onclick="rpsGame(this)">
